--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
             </div>
             <div class="col">
                 <div class="d-grid gap-2 col-6 ">
-                    <button type="button" class="btn" data-bs-toggle="button">A) Issac Newtonn</button>
-                    <button type="button" class="btn" data-bs-toggle="button">B) Albert Einstein</button>
-                    <button type="button" class="btn" data-bs-toggle="button">C) Mogilski</button>
-                    <button type="button" class="btn" data-bs-toggle="button">D) Shawn Mendez</button>
+                    <button type="button" class="btn" data-bs-toggle="button">Submit</button>
                 </div>
             </div>
         </div>
