--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Lilita+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" class="css">
+</head>
   <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col">
+            <div class="col text-center">
                 <h1>Trivia Quiz</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col aligntext-center">
+            <div class="col text-center">
                 <h2 id="question">Who is considerd the father of reletivity?</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <div class="d-grid gap-2 col-6 ">
-                    <button type="button" class="btn" data-bs-toggle="button">A) Issac Newtonn</button>
-                    <button type="button" class="btn" data-bs-toggle="button">B) Albert Einstein</button>
-                    <button type="button" class="btn" data-bs-toggle="button">C) Mogilski</button>
-                    <button type="button" class="btn" data-bs-toggle="button">D) Shawn Mendez</button>
+        <div class="row row3">       
+                <div class="d-grid gap-2 col-8 ">
+                    <button type="button" class="btn" id="btna" data-bs-toggle="button">A) Issac Newton</button>
+                    <button type="button" class="btn" id="btnb" data-bs-toggle="button">B) Albert Einstein</button>
+                    <button type="button" class="btn" id="btnc" data-bs-toggle="button">C) Mogilski</button>
+                    <button type="button" class="btn" id="btnd" data-bs-toggle="button">D) Shawn Mendez</button>
+                </div>      
+                <div class="d-grid gap-2 col-4 ">
+                    <button type="button" class="btn" id="btns" >Submit</button>
                 </div>
-            </div>
-            <div class="col">
-                <div class="d-grid gap-2 col-6 ">
-                    <button type="button" class="btn" data-bs-toggle="button">Submit</button>
-                </div>
-            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
