fished deising part

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button type="button" class="btn" id="btnc" data-bs-toggle="button">C) Mogilski</button>
                     <button type="button" class="btn" id="btnd" data-bs-toggle="button">D) Shawn Mendez</button>
                 </div>      
-                <div class="d-grid gap-2 col-4 ">
+                <div class="d-grid gap-2 col-4 mx-auto ">
                     <button type="button" class="btn" id="btns" >Submit</button>
                 </div>
         </div>
