--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     <button type="button" class="btn" id="btnd" data-bs-toggle="button">D) Shawn Mendez</button>
                 </div>      
                 <div class="d-grid gap-2 col-4 mx-auto ">
-                    <button type="button" class="btn" id="btns" >Submit</button>
+                    <button type="button" class="start-btn btn" id="start-btn">Start</button>
+                    <button type="button" class="btn hide" id="next-btn hide" >Next</button>
                 </div>
         </div>
     </div>
