--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                     <button type="button" class="btn" id="btnc" data-bs-toggle="button">C) Mogilski</button>
                     <button type="button" class="btn" id="btnd" data-bs-toggle="button">D) Shawn Mendez</button>
                 </div>      
-                <div class="d-grid gap-2 col-4 mx-auto ">
-                    <button type="button" class="start-btn btn" id="start-btn">Start</button>
-                    <button type="button" class="btn hide" id="next-btn hide" >Next</button>
+                <div class="d-grid gap-2 col-4 mx-auto justify-content-center align-text-center ">
+                    <button type="button" class="start-btn btn" id="submit-btn">Next</button>
                 </div>
         </div>
     </div>
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
