--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="row row3">       
-                <div class="d-grid gap-2 col-8 ">
+                <div id="answer-buttons" class="d-grid gap-2 col-8 ">
                     <button type="button" class="btn" id="btna" data-bs-toggle="button">A) Issac Newton</button>
                     <button type="button" class="btn" id="btnb" data-bs-toggle="button">B) Albert Einstein</button>
                     <button type="button" class="btn" id="btnc" data-bs-toggle="button">C) Mogilski</button>
